--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <p style="text-align:center;"> <img src="map_resized.png" width="960" height="540"> </p>
         
-        <h4>Students: João Vítor Sgotti Veiga & Sarah Tremoulet </h4>
+        <h4>By: João Vítor Sgotti Veiga & Sarah Tremoulet </h4>
 
     </body>
 </html>
