--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@ creating a cloud to centralized.</div>
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
+                        
+                        <i class="fab fa-css3-alt"></i> primeiro <br>
+                        <i class="fab fa-js-square"></i> segundo <br>
+                        <i class="fa fa-microchip"></i> MatLab<br>
+                        <i class="fab fa-react"></i>dfgd<br>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
                         <li class="list-inline-item"><i class="fab fa-sass"></i></li>
                         <li class="list-inline-item"><i class="fab fa-less"></i></li>
