--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Tangerine:700,500" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Tangerine:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Arial" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Arial" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>-->
                 </ul>
             </div>
         </nav>
@@ -64,6 +64,7 @@
                             <h3 class="mb-0">Research Fellowship</h3>
                             <div class="subheading mb-3">Institute of Systems and Robotics</div>
                             <p>My M.Sc. Thesis was developed in the Soft and Printed Microelectronics Lab in Artificial Muscles made of 4D Soft Actuators Based on Liquid Crystal Elastomers and continued my work in the field.</p>
+                            <a  href="https://spm.isr.uc.pt/">See more</a>
                             <hr>
                         </div>                    
                     <div class="flex-shrink-0"><span class="text-primary">October 2021 - Present</span></div> 
@@ -95,6 +96,7 @@
                             <h3 class="mb-0">Electronic Designer</h3>
                             <div class="subheading mb-3">Solve | Engineering Solutions</div>
                             <p>Worked in the foundation of the first junior company from the University of Coimbra, focused on carrying out specialized sustainable consulting services and learned PCB design on Eagle software.</p>
+                            <a href="https://www.solveportugal.com/">See more</a>
                             <hr>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2019 - September 2020</span></div>
@@ -127,7 +129,7 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h3 class="mb-5">Education</h3>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Coimbra</h3>
@@ -159,7 +161,7 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h3 class="mb-5">Skills</h3>
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
