--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Sgotti Veiga</span>
                     </h1>
                     <div class="subheading mb-3">
-                        Coibra, Portugal · <a href="mailto:jvsgottiveiga@gmail.com">jvsgottiveiga@gmail.com</a>
+                        Coimbra, Portugal · <a href="mailto:jvsgottiveiga@gmail.com">jvsgottiveiga@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Researcher at Institute of Systems and Robotics (ISR-UC)</p>
                     <div class="social-icons">
